@@ -1,7 +1,10 @@
 package org.itsallcode.openfasttrace.api;
 
-import java.util.Collections;
+import java.util.EnumSet;
+import java.util.Objects;
 import java.util.Set;
+
+import org.itsallcode.openfasttrace.api.core.ItemStatus;
 
 /**
  * Settings for import filtering
@@ -9,12 +12,14 @@ import java.util.Set;
 public final class FilterSettings
 {
     private final Set<String> artifactTypes;
+    private final Set<ItemStatus> wantedStatuses;
     private final Set<String> tags;
     private final boolean withoutTags;
 
     private FilterSettings(final Builder builder)
     {
         this.artifactTypes = builder.artifactTypes;
+        this.wantedStatuses = builder.wantedStatuses;
         this.tags = builder.tags;
         this.withoutTags = builder.withoutTags;
     }
@@ -26,7 +31,17 @@ public final class FilterSettings
      */
     public Set<String> getArtifactTypes()
     {
-        return this.artifactTypes;
+        return Set.copyOf(this.artifactTypes);
+    }
+
+    /**
+     * Get the statuses the filter must match.
+     * 
+     * @return statuses that must be matched
+     */
+    public Set<ItemStatus> getWantedStatuses()
+    {
+        return Set.copyOf(this.wantedStatuses);
     }
 
     /**
@@ -34,9 +49,10 @@ public final class FilterSettings
      * 
      * @return artifact types that must be matched
      */
+
     public Set<String> getTags()
     {
-        return this.tags;
+        return Set.copyOf(this.tags);
     }
 
     /**
@@ -60,6 +76,16 @@ public final class FilterSettings
     }
 
     /**
+     * Check if the status filter is set.
+     * 
+     * @return {@code true} if the status filter is set
+     */
+    public boolean isStatusCriteriaSet()
+    {
+        return this.wantedStatuses != null && !this.wantedStatuses.isEmpty();
+    }
+
+    /**
      * Check if the tag filter is set.
      * 
      * @return {@code true} if the tag filter is set
@@ -76,64 +102,22 @@ public final class FilterSettings
      */
     public boolean isAnyCriteriaSet()
     {
-        return isArtifactTypeCriteriaSet() || isTagCriteriaSet();
+        return isArtifactTypeCriteriaSet() || isStatusCriteriaSet() || isTagCriteriaSet();
     }
 
     @Override
     public int hashCode()
     {
-        final int prime = 31;
-        int result = 1;
-        result = prime * result
-                + ((this.artifactTypes == null) ? 0 : this.artifactTypes.hashCode());
-        result = prime * result + (this.withoutTags ? 1231 : 1237);
-        result = prime * result + ((this.tags == null) ? 0 : this.tags.hashCode());
-        return result;
+        return Objects.hash(this.artifactTypes, this.wantedStatuses, this.tags, this.withoutTags);
     }
 
     @Override
-    public boolean equals(final Object obj)
-    {
-        if (this == obj)
-        {
-            return true;
-        }
-        if (obj == null)
-        {
+    public boolean equals(final Object other) {
+        if (!(other instanceof final FilterSettings that)) {
             return false;
         }
-        if (!(obj instanceof FilterSettings))
-        {
-            return false;
-        }
-        final FilterSettings other = (FilterSettings) obj;
-        if (this.artifactTypes == null)
-        {
-            if (other.artifactTypes != null)
-            {
-                return false;
-            }
-        }
-        else if (!this.artifactTypes.equals(other.artifactTypes))
-        {
-            return false;
-        }
-        if (this.withoutTags != other.withoutTags)
-        {
-            return false;
-        }
-        if (this.tags == null)
-        {
-            if (other.tags != null)
-            {
-                return false;
-            }
-        }
-        else if (!this.tags.equals(other.tags))
-        {
-            return false;
-        }
-        return true;
+        return withoutTags == that.withoutTags && Objects.equals(artifactTypes, that.artifactTypes)
+                && Objects.equals(wantedStatuses, that.wantedStatuses) && Objects.equals(tags, that.tags);
     }
 
     /**
@@ -160,10 +144,11 @@ public final class FilterSettings
     /**
      * Builder for {@link FilterSettings}
      */
-    public static class Builder
+    public static final class Builder
     {
-        private Set<String> artifactTypes = Collections.emptySet();
-        private Set<String> tags = Collections.emptySet();
+        private Set<String> artifactTypes = Set.of();
+        private Set<ItemStatus> wantedStatuses = EnumSet.noneOf(ItemStatus.class);
+        private Set<String> tags = Set.of();
         private boolean withoutTags = true;
 
         private Builder()
@@ -180,7 +165,20 @@ public final class FilterSettings
          */
         public Builder artifactTypes(final Set<String> artifactTypes)
         {
-            this.artifactTypes = artifactTypes;
+            this.artifactTypes = Set.copyOf(artifactTypes);
+            return this;
+        }
+
+        /**
+         * Set the list of statuses that the filter matches.
+         * 
+         * @param statuses
+         *            statuses that must be matched
+         * @return <code>this</code> for fluent programming
+         */
+        public Builder wantedStatuses(final Set<ItemStatus> statuses)
+        {
+            this.wantedStatuses = Set.copyOf(statuses);
             return this;
         }
 
@@ -193,12 +191,12 @@ public final class FilterSettings
          */
         public Builder tags(final Set<String> tags)
         {
-            this.tags = tags;
+            this.tags = Set.copyOf(tags);
             return this;
         }
 
         /**
-         * Configure if filter allows items that have no tags.
+         * Configure if the filter allows items that have no tags.
          * 
          * @param noTags
          *            {@code true} to match items without any tags
